<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/travel_logo"
    tools:context=".Register">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:id="@+id/emailEditText"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/confirm_password"
        android:id="@+id/confirmPasswordEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@android:color/transparent"
        android:text="@string/already_Registered"
        android:textColor="@android:color/black"
        android:onClick="switchToLogin"
        android:textStyle="italic"
        android:id="@+id/switch_button"/>


    <Button
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/registerLabel"
        android:textColor="@android:color/white"
        android:onClick="onClickRegister"
        android:id="@+id/register_button"/>




</LinearLayout>