<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/travel_logo"
    tools:context=".Login">

    <View
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <EditText
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:id="@+id/emailEditText"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/passwordEditText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@android:color/transparent"
        android:text="@string/existing_user"
        android:textColor="@android:color/black"
        android:onClick="switchToRegister"
        android:textStyle="italic"/>


    <Button
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/loginLabel"
        android:textColor="@android:color/white"
        android:onClick="onClickLogin"/>




</LinearLayout>