<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/custom_toolbar"
        android:id="@+id/toolbar"/>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2196F3"
        tools:context=".EntertainmentList">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.1">

                <LinearLayout
                    android:tag="1"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/restrauntvector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Food"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:tag="2"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/cafevector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cafe"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="2.1">

                <LinearLayout
                    android:tag="3"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/shoppingvector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Shopping"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:tag="4"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/hotelvector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hotel"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:weightSum="2.1">

                <LinearLayout
                    android:tag="5"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/movievector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Movies"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="0.1"/>

                <LinearLayout
                    android:tag="6"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:onClick="onClickEntertainment"
                    android:background="@drawable/rounded_card">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:src="@drawable/gamingvector"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Gaming"
                        android:layout_gravity="center"
                        android:textColor="@color/vectorColor"
                        android:textSize="25dp"
                        android:layout_marginTop="20dp"/>

                </LinearLayout>





            </LinearLayout>









        </LinearLayout>




    </ScrollView>
</LinearLayout>
